fix: fix the overflow on X that was causing by width on home section

--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -15,7 +15,7 @@
 
 #home-section {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-image: url("../../../../assets/icons/teste.png");
   background-position: center;
   background-repeat: no-repeat;
